# taskpps

./: .gitignore  .gitmodules  AGENTS.md  README.md  agent.md  taskpps.yaml
server/: pyproject.toml  task-id  tr-fry  tr1  valid-task-id
server/docs/: api.md  arch.md  development.md  executors.md  pipeline.md  tasks.md  testcases.md  triggers.md
server/taskpps/: __main__.py  config.py  i18n.py  logging_config.py  main.py  naming.py
server/taskpps/api/: __init__.py  agents.py  artifacts.py  auth.py  health.py  pipelines.py  plugins.py  projects.py  runs.py  triggers.py  ws_agent.py
server/taskpps/auth/: __init__.py  dependencies.py  security.py
server/taskpps/db/: __init__.py  engine.py  repository.py
server/taskpps/domain/: __init__.py  context.py  dag.py  pipeline.py  task.py
server/taskpps/engine/: __init__.py  retry_runner.py  runner.py  step_executor.py
server/taskpps/events/: __init__.py  bus.py
server/taskpps/executors/: __init__.py  agent_executor.py  base.py  git.py  invoke.py  local.py  nexus.py  plugin.py  ssh.py
server/taskpps/loaders/: __init__.py  agent_loader.py  credential_loader.py  pipeline_loader.py
server/taskpps/middleware/: auth.py
server/taskpps/models/: __init__.py  artifact.py  definition.py  plugin.py  project.py  run.py  trigger.py  user.py
server/taskpps/plugins/: __init__.py  base.py  cron_trigger.py
server/taskpps/schemas/: __init__.py  agent.py  artifact.py  pipeline.py  plugin.py  plugin_spec.py  project.py  run.py  trigger.py
server/taskpps/services/: __init__.py  agent_bootstrap.py  agent_manager.py  agent_service.py  artifact_service.py  cron_trigger.py  pipeline_service.py  plugin_base.py  plugin_center.py  plugin_manager.py  result_page.py  trigger_service.py
server/tests/: ALL_TEST_FUNCTIONS.json  ISSUE_BODY.md  TEST_CASE_ACTIVE.json  TEST_CASE_CLEAN.json  TEST_CASE_CLEAN_SUMMARY.json  TEST_CASE_INVENTORY.json  TEST_CASE_SUMMARY.json  conftest.py  perf_benchmark.py  test_agent_api.py  test_agent_api_async.py  test_agent_executor.py  test_agent_manager.py  test_agent_service.py  test_api.py  test_api_extra.py  test_auth.py  test_auth_middleware.py  test_config.py  test_config_extra.py  test_config_models.py  test_context.py  test_context_extra.py  test_coverage_final.py  test_coverage_final2.py  test_coverage_remaining.py  test_db.py  test_db_engine.py  test_db_extra.py  test_db_migration.py  test_domain.py  test_domain_extra.py  test_engine.py  test_engine_extra.py  test_events.py  test_executors.py  test_executors_extra.py  test_final_coverage.py  test_git_executor.py  test_i18n.py  (+28 more)
server/tests/agent/: test_manager.py  (+2 more)
(+488 files in other folders)
