[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskpps"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel>=0.0.22",
    "aiosqlite",
    "pydantic>=2.0",
    "paramiko",
    "invoke",
    "blinker",
    "pyyaml",
    "croniter",
    "sse-starlette",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
taskpps-server = "taskpps.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
