[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskpps"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gunicorn",
    "sqlmodel>=0.0.22",
    "aiosqlite",
    "pydantic>=2.0",
    "paramiko",
    "invoke",
    "blinker",
    "pyyaml",
    "croniter",
    "sse-starlette",
    "httpx>=0.28.1",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
taskpps-server = "taskpps.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "zentao(id, domain, priority): 关联 Zentao 测试用例",
]

[tool.coverage.run]
omit = [
    "taskpps/executors/nexus.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "RUF012", # mutable class attributes
    "RUF001", # ambiguous unicode in strings (Chinese docstrings)
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.lint.isort]
known-first-party = ["taskpps"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


